[tool.poetry]
name = "pretty-agroforestree"
version = "0.1.0"
description = ""
authors = ["Franklin Maloney <franklin.maloney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
tinydb = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
